Fixed text align in location info when text was very long, new bundle.

--- a/src/styles/events.less
+++ b/src/styles/events.less
@@ -140,6 +140,7 @@ article.eventDetails {
     .timeLocationInfo {
       display: flex;
       flex-direction: column;
+      text-align: center;
       align-items: center;
       align-self: center;
       width: 50%;
